# git_laws

./: Makefile  README.md  main.py  pyproject.toml
data/: government_01_1990-1992.json  government_02_1992-1993.json  government_03_1993-1997.json  government_04_1997-2000.json  government_06_2000-2002.json  government_09_2008-2012.json  government_10_2012-2013.json  government_11_2013-2014.json  government_12_2014-2018.json  government_13_2018-2020.json  ministers_combined.json  slovenian_ministers.json
data/en/: government_01_1990-1992.json  government_02_1992-1993.json  government_03_1993-1997.json  government_05_2000.json  government_07_2002-2004.json  government_08_2004-2008.json  government_14_2020-2022.json  government_ministers_manual.json
data/ministers/: government_01_1990-1992.json  government_02_1992-1993.json  government_03_1993-1997.json  government_04_1997-2000.json  government_05_2000.json  (+10 more)
git_laws/: README_ministers.md  api_client.py  combine_ministers.py  config.py  data_downloader.py  data_loader.py  example_usage.py  git_manager.py  law_converter.py  law_processor.py  main.py  minister_lookup.py  minister_lookup_manual.py  minister_scraper.py  pisrs.json
tests/: analyze_euprava_mapping.py  debug_api.py  explore_metadata.py  find_recent_law.py  inspect_npb_details.py  test_api.py  test_automatic_linking.py  test_corrected_amendments.py  test_enhanced_metadata.py  test_euprava_correlation.py  test_historical_npb.py  test_npb_content.py  test_small_download.py  test_zdoh_npb_search.py
viz/: package-lock.json  package.json
viz/src/app/: page.tsx  (+2 more)
(+3 files in other folders)
